--- a/scripts/en_index.html
+++ b/scripts/en_index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <br /><br />
-<b>Migrate from blogspot.com to your own site</b><br /><br />
+<b>Migrate from blogspot.com to your own site</b><br />
 <pre>
 Script to migrate from a blogspot based blog to your own static website.<br />
 These two scripts prepare the html from the blog, obtained from blogspot,
@@ -14,8 +14,19 @@ Welcome are questions or possible improvements, because i could test it just a l
 </pre>
 Instructions and scripts are in:<br />
 <a href="https://github.com/walt3rminer/blogspot2static" target="_parent">Github Repositorio de Blog2Static</a>
-
 <hr />
+<b>Sort bibliography in a latex thesis or paper</b><br />
+<pre>
+Script to sort automatically bibliography in a thesis.  Use:
+</pre>
+<ul>
+<li>make a backup of your work!</li>
+<li>put in a file, correctly sorted, all parts from the thesis. <a href="lista.txt">Get the sample file</a></li>
+<li>execute the script this way: <b>sortbib.pl lista.txt bibliografia.tex &gt; bib2.tex</b></li>
+<li>Now check bib2.tex, add any missing lines in the top and bottom of the file</li>
+<li>Use the bib2.tex file.<li>
+</ul>
+<a href="sortbib.pl">download the script</a>
 
 </body>
 </html>
