--- a/scripts/es_index.html
+++ b/scripts/es_index.html
@@ -4,27 +4,21 @@
 </head>
 <body>
 <br /><br />
-<b>Migrate from blogspot.com to your own site</b><br /><br />
+<b>Migrate from blogspot.com to your own site</b><br />
 <pre>
-I created this script because i needed to migrate my blog from
-blogspot, i wrote for 10 years and it is a lot of content to do it
-manually.  I tested a few programs that existed already, on Internet, i
-do not remember their name in this moment, but even they tell they do 
-what i need, the reality is that they did not worked  to the date (Decembr 2014).
-In my mean times i started doing this project that may be usefull to other
-people.
-<br />
-<br />
+Script para migrar un blog basado en blogspot a uno de contenido estatico.<br /><br />
 These two scripts prepare the html from the blog, obtained from blogspot,
 and to make it work statically, without needing external images.
 <br />
 <br />
 Welcome are questions or possible improvements, because i could test it just a little.<br />
-<br />
 </pre>
 Instructions and scripts are in:<br />
 
 <a href="https://github.com/walt3rminer/blogspot2static" target="_parent">Github Repositorio de Blog2Static</a>
+<hr />
 
+<b>Sort bibliography in a latex thesis or paper</b><br />
+<
 </body>
 </html>
