--- a/en_projects.html
+++ b/en_projects.html
@@ -7,7 +7,8 @@
 <a href="linuxkids/en_index.html">Linux For Kids: A Linux Live CD for Secure Content Access</a><br /><br />
 <a href="redfirewall/en_index.html">REDFirewall a Linux Live CD for a firewall without disk</a><br /><br />
 <a href="security/en_small_pe.html">Small PE Executable in ASM</a><br /><br />
-<a href="scripts/en_index.html">Migrate from blogspot.com to your own site</a><br /><br />
+<a href="scripts/en_index.html#script1">Migrate from blogspot.com to your own site</a><br /><br />
+<a href="scripts/en_index.html#script2">Sort automatically bibliography in latex thesis or paper</a><br /><br />
 
 </body>
 </html>
