--- a/es_projects.html
+++ b/es_projects.html
@@ -7,7 +7,8 @@
 <a href="linuxkids/es_index.html">Linux Para Niños: Un Live CD para acceso seguro de contenido</a><br /><br />
 <a href="redfirewall/es_index.html">REDFirewall a Linux Live CD for a firewall without disk</a><br /><br />
 <a href="security/es_small_pe.html">Small PE Executable in ASM</a><br /><br />
-<a href="scripts/es_index.html">Migrate from blogspot.com to your own site</a><br /><br />
+<a href="scripts/en_index.html#script1">Migrar de sitio dinamico tipo blogspot a uno propio estático</a><br />
+<a href="scripts/en_index.html#script2">Ordenar automaticamente bibliografia en latex paper o tesis</a><br /><br />
 
 </body>
 </html>
