--- a/scripts/en_index.html
+++ b/scripts/en_index.html
@@ -24,7 +24,7 @@ Script to sort automatically bibliography in a thesis.  Use:
 <li>put in a file, correctly sorted, all parts from the thesis. <a href="lista.txt">Get the sample file</a></li>
 <li>execute the script this way: <b>sortbib.pl lista.txt bibliografia.tex &gt; bib2.tex</b></li>
 <li>Now check bib2.tex, add any missing lines in the top and bottom of the file</li>
-<li>Use the bib2.tex file.<li>
+<li>Use the bib2.tex file.</li>
 </ul>
 <a href="sortbib.pl">download the script</a>
 
