--- a/scripts/es_index.html
+++ b/scripts/es_index.html
@@ -18,7 +18,18 @@ Instructions and scripts are in:<br />
 <a href="https://github.com/walt3rminer/blogspot2static" target="_parent">Github Repositorio de Blog2Static</a>
 <hr />
 
-<b>Sort bibliography in a latex thesis or paper</b><br />
-<
+<b>Ordenar bibliografia en tesis o paper hechos en latex</b><br />
+<pre>
+Script para ordenar automaticamente bibliografia en una tesis.  Uso:
+</pre>
+<ul>
+<li>haz un backup de tu trabajo!</li>
+<li>Pon dentro de un archivo, correctmente ordendado, todas las partes de la tesis. <a href="lista.txt">Ejemplo de archivo</a></li>
+<li>ejecuta el script de esta manera: <b>sortbib.pl lista.txt bibliografia.tex &gt; bib2.tex</b></li>
+<li>Ahora revisa bib2.tex, agrega lineas que puedan faltar arriba y debajo del archivo</li>
+<li>Utiliza el archivo bib2.tex.</li>
+</ul>
+<a href="sortbib.pl">obten el script</a>
+
 </body>
 </html>
