--- a/scripts/en_index.html
+++ b/scripts/en_index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 <br /><br />
+<div id="script1">
 <b>Migrate from blogspot.com to your own site</b><br />
 <pre>
 Script to migrate from a blogspot based blog to your own static website.<br />
@@ -15,6 +16,7 @@ Welcome are questions or possible improvements, because i could test it just a l
 Instructions and scripts are in:<br />
 <a href="https://github.com/walt3rminer/blogspot2static" target="_parent">Github Repositorio de Blog2Static</a>
 <hr />
+<div id="script2">
 <b>Sort bibliography in a latex thesis or paper</b><br />
 <pre>
 Script to sort automatically bibliography in a thesis.  Use:
