--- a/scripts/es_index.html
+++ b/scripts/es_index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 <br /><br />
+<div id="script1">
 <b>Migrate from blogspot.com to your own site</b><br />
 <pre>
 Script para migrar un blog basado en blogspot a uno de contenido estatico.<br /><br />
@@ -18,6 +19,7 @@ Instructions and scripts are in:<br />
 <a href="https://github.com/walt3rminer/blogspot2static" target="_parent">Github Repositorio de Blog2Static</a>
 <hr />
 
+<div id="script2">
 <b>Ordenar bibliografia en tesis o paper hechos en latex</b><br />
 <pre>
 Script para ordenar automaticamente bibliografia en una tesis.  Uso:
