nuevo script que cifra

--- a/en_projects.html
+++ b/en_projects.html
@@ -9,6 +9,7 @@
 <a href="security/en_small_pe.html">Small PE Executable in ASM</a><br /><br />
 <a href="scripts/en_index.html#script1">Migrate from blogspot.com to your own site</a><br /><br />
 <a href="scripts/en_index.html#script2">Sort automatically bibliography in latex thesis or paper</a><br /><br />
+<a href="scripts/es_index.html#script3">Encrypt and Decrypt list of files using pgp</a><br /><br />
 
 </body>
 </html>
