--- a/scripts/es_index.html
+++ b/scripts/es_index.html
@@ -15,10 +15,8 @@ and to make it work statically, without needing external images.
 Welcome are questions or possible improvements, because i could test it just a little.<br />
 </pre>
 Instructions and scripts are in:<br />
-
 <a href="https://github.com/walt3rminer/blogspot2static" target="_parent">Github Repositorio de Blog2Static</a>
 <hr />
-
 <div id="script2">
 <b>Ordenar bibliografia en tesis o paper hechos en latex</b><br />
 <pre>
@@ -32,6 +30,23 @@ Script para ordenar automaticamente bibliografia en una tesis.  Uso:
 <li>Utiliza el archivo bib2.tex.</li>
 </ul>
 <a href="sortbib.pl">obten el script</a>
+
+<hr />
+<div id="script3">
+<b>Cifrar y descifrar lista de archivos usando pgp</b><br />
+<pre>
+Simplemente hace lo que dice: ingresa la clave dos veces, no se muestra por pantalla y elimina el original.
+</pre>
+<ul>
+<li>haz un backup de tu trabajo!</li>
+<li>Cuidado, por que tras cifrar, elimina el archivo original *el no cifrado*</li>
+<li>Al des-cifrar NO elimina el cifrado.</li>
+<li>Pon dentro de un archivo, los archivos a cifrar o descifrar. <a href="lista2.txt">Ejemplo de archivo</a></li>
+<li>ejecuta el script de esta manera: <b>gpgcifrar.pl lista.txt</b></li>
+</ul>
+<a href="gpgcifrar.pl">Obten el script</a>
+
+
 
 </body>
 </html>
