--- a/es_projects.html
+++ b/es_projects.html
@@ -9,6 +9,7 @@
 <a href="security/es_small_pe.html">Small PE Executable in ASM</a><br /><br />
 <a href="scripts/es_index.html#script1">Migrar de sitio dinamico tipo blogspot a uno propio estático</a><br /><br />
 <a href="scripts/es_index.html#script2">Ordenar automaticamente bibliografia en latex paper o tesis</a><br /><br />
+<a href="scripts/es_index.html#script3">Cifrar y descifrar lista de archivos con pgp</a><br /><br />
 
 </body>
 </html>
