--- a/scripts/es_index.html
+++ b/scripts/es_index.html
@@ -18,22 +18,22 @@ Instructions and scripts are in:<br />
 <a href="https://github.com/walt3rminer/blogspot2static" target="_parent">Github Repositorio de Blog2Static</a>
 <hr />
 <div id="script2">
-<b>Ordenar bibliografia en tesis o paper hechos en latex</b><br />
+<b>Ordenar bibliografia en tesis o paper hechos en latex</b>&nbsp;
+<a href="https://github.com/walt3rminer/perl/tree/master/sortbib">ir al repo!</a><br />
 <pre>
 Script para ordenar automaticamente bibliografia en una tesis.  Uso:
 </pre>
 <ul>
 <li>haz un backup de tu trabajo!</li>
-<li>Pon dentro de un archivo, correctmente ordendado, todas las partes de la tesis. <a href="lista.txt">Ejemplo de archivo</a></li>
+<li>Pon dentro de un archivo, correctmente ordendado, todas las partes de la tesis.</li>
 <li>ejecuta el script de esta manera: <b>sortbib.pl lista.txt bibliografia.tex &gt; bib2.tex</b></li>
 <li>Ahora revisa bib2.tex, agrega lineas que puedan faltar arriba y debajo del archivo</li>
 <li>Utiliza el archivo bib2.tex.</li>
 </ul>
-<a href="sortbib.pl">obten el script</a>
 
 <hr />
 <div id="script3">
-<b>Cifrar y descifrar lista de archivos usando pgp</b><br />
+<b>Cifrar y descifrar lista de archivos usando pgp</b>&nbsp;<a href="https://github.com/walt3rminer/perl/tree/master/gpgcifrar">ir al repo!</a><br />
 <pre>
 Simplemente hace lo que dice: ingresa la clave dos veces, no se muestra por pantalla y elimina el original.
 </pre>
@@ -41,10 +41,9 @@ Simplemente hace lo que dice: ingresa la clave dos veces, no se muestra por pant
 <li>haz un backup de tu trabajo!</li>
 <li>Cuidado, por que tras cifrar, elimina el archivo original *el no cifrado*</li>
 <li>Al des-cifrar NO elimina el cifrado.</li>
-<li>Pon dentro de un archivo, los archivos a cifrar o descifrar. <a href="lista2.txt">Ejemplo de archivo</a></li>
+<li>Pon dentro de un archivo, los archivos a cifrar o descifrar.</li>
 <li>ejecuta el script de esta manera: <b>gpgcifrar.pl lista.txt</b></li>
 </ul>
-<a href="gpgcifrar.pl">Obten el script</a>
 
 
 
