--- a/scripts/es_index.html
+++ b/scripts/es_index.html
@@ -5,7 +5,8 @@
 <body>
 <br /><br />
 <div id="script1">
-<b>Migrate from blogspot.com to your own site</b><br />
+<b>Migrate from blogspot.com to your own site</b>&nbrp;
+<a href="https://github.com/walt3rminer/perl/tree/master/blogspot2static" target="_new">ir al repo!</a><br />
 <pre>
 Script para migrar un blog basado en blogspot a uno de contenido estatico.<br /><br />
 These two scripts prepare the html from the blog, obtained from blogspot,
@@ -14,12 +15,10 @@ and to make it work statically, without needing external images.
 <br />
 Welcome are questions or possible improvements, because i could test it just a little.<br />
 </pre>
-Instructions and scripts are in:<br />
-<a href="https://github.com/walt3rminer/blogspot2static" target="_parent">Github Repositorio de Blog2Static</a>
 <hr />
 <div id="script2">
 <b>Ordenar bibliografia en tesis o paper hechos en latex</b>&nbsp;
-<a href="https://github.com/walt3rminer/perl/tree/master/sortbib">ir al repo!</a><br />
+<a href="https://github.com/walt3rminer/perl/tree/master/sortbib" target="_new">ir al repo!</a><br />
 <pre>
 Script para ordenar automaticamente bibliografia en una tesis.  Uso:
 </pre>
@@ -33,7 +32,8 @@ Script para ordenar automaticamente bibliografia en una tesis.  Uso:
 
 <hr />
 <div id="script3">
-<b>Cifrar y descifrar lista de archivos usando pgp</b>&nbsp;<a href="https://github.com/walt3rminer/perl/tree/master/gpgcifrar">ir al repo!</a><br />
+<b>Cifrar y descifrar lista de archivos usando pgp</b>&nbsp;
+<a href="https://github.com/walt3rminer/perl/tree/master/gpgcifrar" target="_new">ir al repo!</a><br />
 <pre>
 Simplemente hace lo que dice: ingresa la clave dos veces, no se muestra por pantalla y elimina el original.
 </pre>
