--- a/scripts/es_index.html
+++ b/scripts/es_index.html
@@ -5,7 +5,7 @@
 <body>
 <br /><br />
 <div id="script1">
-<b>Migrate from blogspot.com to your own site</b>&nbrp;
+<b>Migrate from blogspot.com to your own site</b>&nbsp;
 <a href="https://github.com/walt3rminer/perl/tree/master/blogspot2static" target="_new">ir al repo!</a><br />
 <pre>
 Script para migrar un blog basado en blogspot a uno de contenido estatico.<br /><br />
