modified layout and content

--- a/en_central.html
+++ b/en_central.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <title>Walter - Personal website</title>
 </head>
-<body>
+<body bgcolor="black" style="color:white; font-family: Verdana;">
 Hi! Welcome to my home page.  My name is Walter and here i 
 share some of my projects and ideas.<br /><br />
 <br />
