--- a/en_top.html
+++ b/en_top.html
@@ -5,8 +5,32 @@
 
 <meta charset="UTF-8">
 </head>
-<body bgcolor="#E6E6FA">
+<body bgcolor="#000000;">
+<center>
+
+<div style="font-weight: bold; font-size: 12px; color: #ffb366; font-family: cursive;">
+Programming, Security and Datamining, any similarity with hollywood is just a coincidence.
+</div>
+
+<style type="text/css">
+a:link {color: #ccffcc; text-decoration: none;}
+a:active {color: #b3ffff; text-decoration: underline; }
+a:visited {color: #b3ffff; text-decoration: underline; }
+a:hover {color: #ff0000; text-decoration: none; }
+</style>
+<b>
+<div style="font-weight: bold; font-size: 12px; color: #b3ffff;">
 <a href="/index_es.html" target="_parent">Spanish</a>
-<center>Programming, Security and Datamining, any similarity with hollywood is just a coincidence.</center>
+-
+<a href="en_central.html" target="central">Start</a>
+-
+<a href="en_cv.html" target="central">Resume</a>
+-
+<a href="en_projects.html" target="central">Projects</a>
+-
+<a href="/blog/" target="_new">my Linux Blog</a>
+</div>
+</b>
+</center>
 </body>
 </html>
