--- a/es_central.html
+++ b/es_central.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <title>Walter - Página personal</title>
 </head>
-<body>
+<body bgcolor="black" style="color:white; font-family: Verdana;">
 Hola! Bienvenido a mi página web. Mi nombre es Walter y aca comparto algunos proyectos e ideas.
 <br /><br />
 
