--- a/es_top.html
+++ b/es_top.html
@@ -1,9 +1,36 @@
 <html>
 <head>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 <meta charset="UTF-8">
 </head>
-<body bgcolor="#E6E6FA">
-<a href="/index.html" target="_parent">English</a>
-<center>Programacion, Seguridad y mineria de datos, cualquier similitud con hollywood es mera coincidencia.<br />
+<body bgcolor="#000000;">
+<center>
+
+<div style="font-weight: bold; font-size: 12px; color: #ffb366; font-family: cursive;">
+Programación, Seguridad y Datamining.  Cualquier similitud con hollywood es mera coincidencia.
+</div>
+
+<style type="text/css">
+a:link {color: #ccffcc; text-decoration: none;}
+a:active {color: #b3ffff; text-decoration: underline; }
+a:visited {color: #b3ffff; text-decoration: underline; }
+a:hover {color: #ff0000; text-decoration: none; }
+</style>
+<b>
+<div style="font-weight: bold; font-size: 12px; color: #b3ffff;">
+<a href="/index.html" target="_parent">Inglés</a>
+-
+<a href="en_central.html" target="central">Inicio</a>
+-
+<a href="en_cv.html" target="central">Currículum</a>
+-
+<a href="en_projects.html" target="central">Proyectos</a>
+-
+<a href="/blog/" target="_new">mi Blog</a>
+</div>
+</b>
 </center>
 </body>
+</html>
