--- a/security/en_small_pe.html
+++ b/security/en_small_pe.html
@@ -8,7 +8,7 @@ learn about the PE header.
 
 <br /><br />
 Assembler:<a href="http://www.nasm.us/pub/nasm/releasebuilds/?C=M;O=D" target="_new">nasm</a> or a local copy
-<a href="nasm-2.11.09rc1-win32.zip">Get nasm-2.11.09rc1-win32.zip here</a><br />
+<a href="https://drive.google.com/open?id=0B3S6fgRmEp2GWHVlNGhOUmd3ZTQ">Get nasm-2.11.09rc1-win32.zip here</a><br />
 
 Debugger:<a href="http://debugger.immunityinc.com/ID_register.py" target="_new">Immunity Debugger</a> or a local copy
 <a href="ImmunityDebugger_1_85_setup.exe">ImmunityDebugger_1_85_setup.exe</a><br />
