--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -2,19 +2,32 @@
 <head>
 <meta charset="UTF-8">
 </head>
-<body>
+<body bgcolor="black" style="color:white; font-family: Verdana;">
 
-Este es un análisis de red social acerca de la red de actores de películas argentinos.<br />
-Creé este trabajo para el curso de Análisis de Redes Sociales en la universidad de Michigan, Otoño 2013.<br /><br />
-<br />
 
-Basado en IMDB, analicé películas y actores, creé una estructura de datos de grafo y analicé 
+<u><b>Análisis de redes sociales</b></u><br />
+Son muy útiles los métodos que se pueden utilizar para analizar como se
+propagaría una epidemia dadas ciertas condiciones.   Identificar líderes de 
+opinión ó comunidades.  En este trabajo práctico que hice para el curso de 
+Análisis de Redes Sociales en la universidad de Michigan durante el Otoño 2013,
+presento una red de actores de películas argentinos.  El trabajo está
+basado en IMDB, analicé películas y actores, creé una estructura de datos de grafo y analicé 
 la relación entre actores que trabajan juntos.<br /><br />
-
 
 <a href="Lamagna.pdf" />Análisis de Red Social de Actores</a>
 
 <br />
+<br />
+<br />
+<u><b>Análisis de datos electorales</b></u><br />
+En la política hay corrupción y muchísimas cosas que no tienen nada
+que ver con todo lo que me gusta.  Eso si, les reconozco que también
+hay una abundancia, riqueza y diversidad de datos !  ¿ Cómo poder
+coexistir ?  Me da igual.  Los datos abiertos de gobierno dan lugar
+a poder contar una historia ó iniciar algun tipo de investigación.<br />
+En otras palabras: Responder preguntas! <br /><br />
+
+<a href="el1.html">¿ Porqué en el 2013 el partido político Convergencia Popular Porteña obtuvo 0 votos ?</a><br />
 
 </body>
 </html>
