--- a/es_central.html
+++ b/es_central.html
@@ -11,7 +11,7 @@ Hola! Bienvenido a mi página web. Mi nombre es Walter y aca comparto algunos pr
 Intereses técnicos:
 <ul>
 <li>seguridad informática</li>
-<li><a href="dm/es_index.html">mineria de datos y descubrimiento de conocimiento</a></li>
+<li><a href="dm/es_index.html">mineria de datos y descubrimiento de conocimiento (ciencia de datos)</a></li>
 <li>programacion</li>
 </ul>
 
