--- a/dm/el1.html
+++ b/dm/el1.html
@@ -24,7 +24,10 @@ La Voz: El partido político que sacó cero voto en las elecciones porteñas</a>
 A pesar de la repercusión mediática, esto es estadísticamente hablando muy raro.  Sin necesidad de hacer cuentas,
 aunque sea por error ó por no saber a quién votar, es muy extraño que no reciba un solo voto.<br />
 
+<img src="hist1.png" />
 <br />
+Aqui se observan los pocos (pero no nulos) votos de Convergencia Popular Porteña.<br /><br />
+
 
 <u><b>Datos, datos datos!</b></u><br />
 <a href="http://www.datospublicos.gob.ar/data/storage/f/2013-10-29T15%3A43%3A49.367Z/electoral-2013-completo.zip">
