--- a/dm/el1.html
+++ b/dm/el1.html
@@ -26,7 +26,16 @@ aunque sea por error ó por no saber a quién votar, es muy extraño que no reci
 
 <img src="hist1.png" />
 <br />
-Aqui se observan los pocos (pero no nulos) votos de Convergencia Popular Porteña.<br /><br />
+Aqui se observan los pocos (pero no nulos) votos de Convergencia Popular Porteña. Por algún motivo en el 
+set de datos oficiál de Datos Abiertos de Gobierno el partido ha sido eliminado (Lista 905).<br />
+Este trabajo muestra tres cosas:
+<ul>
+<li>Que tras los datos hay una historia y una posible investigación</li>
+<li>La importancia de que los datos transcriptos estén acompañados por los datos manuscritos</li>
+<li>El peligro del voto electrónico</li>
+</ul>
+<br /><br />
+
 
 
 <u><b>Datos, datos datos!</b></u><br />
