--- a/dm/el1.html
+++ b/dm/el1.html
@@ -26,6 +26,8 @@ aunque sea por error ó por no saber a quién votar, es muy extraño que no reci
 
 <img src="hist1.png" />
 <br />
+En amarillo el dato tipeado, en azul el dígito reconocido
+por una red neuronal convolucional (ConvNet).
 Aqui se observan los pocos (pero no nulos) votos de Convergencia Popular Porteña. Por algún motivo en el 
 set de datos oficiál de Datos Abiertos de Gobierno el partido ha sido eliminado (Lista 905).<br />
 Este trabajo muestra tres cosas:
