updated security file

--- a/security/en_small_pe.html
+++ b/security/en_small_pe.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Walter - Página personal</title>
+</head>
+<body bgcolor="black" style="color:white; font-family: Verdana;">
 
 
 This small PE executable assm code can help to start debugging and
@@ -10,8 +16,10 @@ learn about the PE header.
 Assembler:<a href="http://www.nasm.us/pub/nasm/releasebuilds/?C=M;O=D" target="_new">nasm</a> or a local copy
 <a href="https://drive.google.com/open?id=0B3S6fgRmEp2GWHVlNGhOUmd3ZTQ">Get nasm-2.11.09rc1-win32.zip here</a><br />
 
-Debugger:<a href="http://debugger.immunityinc.com/ID_register.py" target="_new">Immunity Debugger</a> or a local copy
-<a href="ImmunityDebugger_1_85_setup.exe">ImmunityDebugger_1_85_setup.exe</a><br />
 
+Debugger:<a href="http://debugger.immunityinc.com/ID_register.py" target="_new">Immunity Debugger</a> or a local copy
+<a href="https://drive.google.com/open?id=0B3S6fgRmEp2GbXNrOVJpOHlhd2c">ImmunityDebugger_1_85_setup.exe</a><br />
+
+</body></html>
 
 
