--- a/en_menu.html
+++ b/en_menu.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+<a href="es_central.html" target="central">Spanish</a><br />
 <a href="en_central.html" target="central">Start</a><br />
 <a href="en_cv.html" target="central">Resume</a><br />
 <a href="en_projects.html" target="central">Projects</a><br />
