--- a/es_top.html
+++ b/es_top.html
@@ -24,9 +24,9 @@ a:hover {color: #ff0000; text-decoration: none; }
 -
 <a href="en_central.html" target="central">Inicio</a>
 -
-<a href="en_cv.html" target="central">Currículum</a>
+<a href="es_cv.html" target="central">Currículum</a>
 -
-<a href="en_projects.html" target="central">Proyectos</a>
+<a href="es_projects.html" target="central">Proyectos</a>
 -
 <a href="/blog/" target="_new">mi Blog</a>
 </div>
