modified projects file

--- a/es_projects.html
+++ b/es_projects.html
@@ -1,8 +1,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<title>Walter - Página personal</title>
 </head>
-<body>
+<body bgcolor="black" style="color:white; font-family: Verdana;">
 <br /><br />
 <a href="linuxkids/es_index.html">Linux Para Niños: Un Live CD para acceso seguro de contenido</a><br /><br />
 <a href="redfirewall/es_index.html">REDFirewall a Linux Live CD for a firewall without disk</a><br /><br />
