--- a/en_projects.html
+++ b/en_projects.html
@@ -1,8 +1,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<title>Walter - Página personal</title>
 </head>
-<body>
+<body bgcolor="black" style="color:white; font-family: Verdana;">
+
 <br /><br />
 <a href="linuxkids/en_index.html">Linux For Kids: A Linux Live CD for Secure Content Access</a><br /><br />
 <a href="redfirewall/en_index.html">REDFirewall a Linux Live CD for a firewall without disk</a><br /><br />
