--- a/security/en_small_pe.html
+++ b/security/en_small_pe.html
@@ -14,11 +14,11 @@ learn about the PE header.
 
 <br /><br />
 Assembler:<a href="http://www.nasm.us/pub/nasm/releasebuilds/?C=M;O=D" target="_new">nasm</a> or a local copy
-<a href="https://drive.google.com/open?id=0B3S6fgRmEp2GWHVlNGhOUmd3ZTQ">Get nasm-2.11.09rc1-win32.zip here</a><br />
+<a href="https://drive.google.com/open?id=0B3S6fgRmEp2GWHVlNGhOUmd3ZTQ" target="_new">Get nasm-2.11.09rc1-win32.zip here</a><br />
 
 
 Debugger:<a href="http://debugger.immunityinc.com/ID_register.py" target="_new">Immunity Debugger</a> or a local copy
-<a href="https://drive.google.com/open?id=0B3S6fgRmEp2GbXNrOVJpOHlhd2c">ImmunityDebugger_1_85_setup.exe</a><br />
+<a href="https://drive.google.com/open?id=0B3S6fgRmEp2GbXNrOVJpOHlhd2c" target="_new">ImmunityDebugger_1_85_setup.exe</a><br />
 
 </body></html>
 
