--- a/es_central.html
+++ b/es_central.html
@@ -17,7 +17,7 @@ Intereses técnicos:
 
 Otros Intereses:
 <ul>
-<li>ecología, reciclado y fuentes de energía</li>
+<li><a href="ecologia/reciclado.html">ecología, reciclado y fuentes de energía</a></li>
 <li>idiomas y diversidad cultural</li>
 <li>Yo Amo: Nadar, Esquiar en la nieve y deportes de equipo en el agua y <a href="taichivideo.html">Tai Chi</a></li>
 </ul>
