--- a/security/es_small_pe.html
+++ b/security/es_small_pe.html
@@ -17,6 +17,13 @@ Assembler:<a href="http://www.nasm.us/pub/nasm/releasebuilds/?C=M;O=D" target="_
 
 Debugger:<a href="http://debugger.immunityinc.com/ID_register.py" target="_new">Immunity Debugger</a> or a local copy
 <a href="https://drive.google.com/open?id=0B3S6fgRmEp2GbXNrOVJpOHlhd2c" target="_new">ImmunityDebugger_1_85_setup.exe</a><br />
+<br /><br />
+Compiling assm in Windows 7
+<pre>
+c:\nasm\nasm.exe test.asm -o test.exe
+</pre>
+
+
 
 </body></html>
 
