--- a/ecologia/reciclado.html
+++ b/ecologia/reciclado.html
@@ -7,6 +7,27 @@
 
 <u><b>IDEA: Menu dinamico para la heladera</b></u><br />
 
+Materiales que se pueden reutilizar:
+<ul>
+<li>Publicidades imantadas de heladera</li>
+<li>Carton de royos de cocina usados</li>
+</ul>
+
+Se necesita:
+<ul>
+<li>Pegamento para papel</li>
+<li>Lapicera</li>
+<li>Creatividad</li>
+</ul>
+
+La heladera suele tener muchos de estos rectangulos con numeros de telefono
+de comercios que cambiaron su número de teléfono ó dirección pero el imán
+sigue funcionando.<br />
+<br />
+
+<b>Paso 1</b><br />
+<img src="100_6869.jpg" width=100 height=100 />
+
 
 
 
