--- a/ecologia/reciclado.html
+++ b/ecologia/reciclado.html
@@ -17,16 +17,34 @@ Se necesita:
 <ul>
 <li>Pegamento para papel</li>
 <li>Lapicera</li>
+<li>Tijera</li>
 <li>Creatividad</li>
 </ul>
 
-La heladera suele tener muchos de estos rectangulos con numeros de telefono
-de comercios que cambiaron su número de teléfono ó dirección pero el imán
-sigue funcionando.<br />
+La heladera suele tener muchos de estos rectangulos himantados con 
+propaganda de productos y servicios.  Muchos de estos
+comercios cambiaron su número de teléfono ó dirección pero el imán
+sigue funcionando.<br />Generalmente uno no encuentra un uso para estos
+restos y terminan en un tacho de basura y finalmente sumando contaminación
+al planeta por los siguientes mil años.
 <br />
 
 <b>Paso 1</b><br />
-<img src="100_6869.jpg" width=100 height=100 />
+<img src="100_6864.JPG" width=100 height=100 />
+<br />
+Prepara la tijera, la plancha magnetica de las publicidades, el pegamento y el carton usado.<br />
+
+
+<b>Paso 2</b><br />
+<img src="100_6869.JPG" width=100 height=100 />
+<br />
+Recortamos pedacitos de carton y escribimos componentes de un menu.<br />
+<b>Podes poner en un carton: <u>Milanesas</u>, y en otro <u>De pollo</u> lo que
+te permitiria combinarlos.</b>
+<br />
+<br />
+
+<img src="100_6869.JPG" width=100 height=100 />
 
 
 
