--- a/ecologia/reciclado.html
+++ b/ecologia/reciclado.html
@@ -30,13 +30,13 @@ al planeta por los siguientes mil años.
 <br />
 
 <b>Paso 1</b><br />
-<img src="100_6864.JPG" width=100 height=100 />
+<img src="100_6864.JPG" width=300 height=300 />
 <br />
 Prepara la tijera, la plancha magnetica de las publicidades, el pegamento y el carton usado.<br />
 
 
 <b>Paso 2</b><br />
-<img src="100_6869.JPG" width=100 height=100 />
+<img src="100_6869.JPG" width=300 height=300 />
 <br />
 Recortamos pedacitos de carton y escribimos componentes de un menu.<br />
 <b>Podes poner en un carton: <u>Milanesas</u>, y en otro <u>De pollo</u> lo que
@@ -44,7 +44,30 @@ te permitiria combinarlos.</b>
 <br />
 <br />
 
-<img src="100_6869.JPG" width=100 height=100 />
+<b>Paso 3</b><br />
+<img src="100_6870.JPG" width=300 height=300 />
+<br />
+Recortamos pedacidos de la planchuela imantada<br />
+<br />
+
+<b>Paso 4</b><br />
+<img src="100_6871.JPG" width=300 height=300 />
+<br />
+Y con alguna pinza o con la uña inclusive, pueden extraer lo que es la publicidad pegada al
+otro lado de la parte negra (que es el imán).  Sacamos eso para que el peso que tenga que
+soportar el imán sea menor.  También por que de esta manera mejora la superficie donde se
+coloca el pegamento y la adhesión.
+<br />
+
+<b>Paso 5</b><br />
+<img src="100_6872.JPG" width=300 height=300 />
+<img src="100_6873.JPG" width=300 height=300 />
+<br />
+Pegamos el pedacito de carton recortado y escrito al imán.  Pegamos la cara del imán que tenía
+la publicidad, nos aseguramos que la superficie negra del imán quede limpia así la adhesión a
+la heladera será mejor.
+<br />
+
 
 
 
