--- a/ecologia/reciclado.html
+++ b/ecologia/reciclado.html
@@ -7,75 +7,9 @@
 
 <u><b>IDEA: Menu dinamico para la heladera</b></u><br />
 
-Materiales que se pueden reutilizar:
-<ul>
-<li>Publicidades imantadas de heladera</li>
-<li>Carton de royos de cocina usados</li>
-</ul>
+Reutilizar imanes y carton para hacer un menu dinamico.<br />
 
-Se necesita:
-<ul>
-<li>Pegamento para papel</li>
-<li>Lapicera</li>
-<li>Tijera</li>
-<li>Creatividad</li>
-</ul>
-
-La heladera suele tener muchos de estos rectangulos himantados con 
-propaganda de productos y servicios.  Muchos de estos
-comercios cambiaron su número de teléfono ó dirección pero el imán
-sigue funcionando.<br />Generalmente uno no encuentra un uso para estos
-restos y terminan en un tacho de basura y finalmente sumando contaminación
-al planeta por los siguientes mil años.
-<br />
-
-<b>Paso 1</b><br />
-<img src="100_6864.JPG" width=300 height=300 />
-<br />
-Prepara la tijera, la plancha magnetica de las publicidades, el pegamento y el carton usado.<br />
-
-
-<b>Paso 2</b><br />
-<img src="100_6869.JPG" width=300 height=300 />
-<br />
-Recortamos pedacitos de carton y escribimos componentes de un menu.<br />
-<b>Podes poner en un carton: <u>Milanesas</u>, y en otro <u>De pollo</u> lo que
-te permitiria combinarlos.</b>
-<br />
-<br />
-
-<b>Paso 3</b><br />
-<img src="100_6870.JPG" width=300 height=300 />
-<br />
-Recortamos pedacidos de la planchuela imantada<br />
-<br />
-
-<b>Paso 4</b><br />
-<img src="100_6871.JPG" width=300 height=300 />
-<br />
-Y con alguna pinza o con la uña inclusive, pueden extraer lo que es la publicidad pegada al
-otro lado de la parte negra (que es el imán).  Sacamos eso para que el peso que tenga que
-soportar el imán sea menor.  También por que de esta manera mejora la superficie donde se
-coloca el pegamento y la adhesión.
-<br />
-
-<b>Paso 5</b><br />
-<img src="100_6872.JPG" width=300 height=300 />
-<img src="100_6873.JPG" width=300 height=300 />
-<br />
-Pegamos el pedacito de carton recortado y escrito al imán.  Pegamos la cara del imán que tenía
-la publicidad, nos aseguramos que la superficie negra del imán quede limpia así la adhesión a
-la heladera será mejor.
-<br />
-
-<b>Proyecto terminado!</b><br />
-<img src="100_6877.JPG" width=300 height=300 />
-<br />
-En casa nos resulta de utilidad por que nos ahorra papel y tiempo.  Tenemos una 
-idea de lo que se comió en la semana para mantener una dieta saludable y balanceada.<br />
-
-
-
+<a href="/ecologia/heladera.html">Leer detalles</a>
 
 
 
