--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -20,10 +20,8 @@ la relación entre actores que trabajan juntos.<br /><br />
 <br />
 <br />
 <u><b>Análisis de datos electorales</b></u><br />
-En la política hay corrupción y muchísimas cosas que no tienen nada
-que ver con todo lo que me gusta.  Eso si, les reconozco que también
-hay una abundancia, riqueza y diversidad de datos !  ¿ Cómo poder
-coexistir ?  Me da igual.  Los datos abiertos de gobierno dan lugar
+En la política también hay una abundancia, riqueza y diversidad de datos.
+Los datos abiertos de gobierno dan lugar
 a poder contar una historia ó iniciar algun tipo de investigación.<br />
 En otras palabras: Responder preguntas! <br /><br />
 
