--- a/es_central.html
+++ b/es_central.html
@@ -10,7 +10,7 @@ Hola! Bienvenido a mi página web. Mi nombre es Walter y aca comparto algunos pr
 <br />
 Intereses técnicos:
 <ul>
-<li>seguridad informática</li>
+<li><a href="security/index.html">seguridad informática</a></li>
 <li><a href="dm/es_index.html">mineria de datos y descubrimiento de conocimiento (ciencia de datos)</a></li>
 <li>programacion</li>
 </ul>
