--- a/es_top.html
+++ b/es_top.html
@@ -9,7 +9,7 @@
 <center>
 
 <div style="font-weight: bold; font-size: 12px; color: #ffb366; font-family: cursive;">
-Programación, Seguridad y Datamining.  Cualquier similitud con hollywood es mera coincidencia.
+Programación, Datamining y Seguridad.  Open Source, Libertad de expresión y Open Data.
 </div>
 
 <style type="text/css">
@@ -20,7 +20,7 @@ a:hover {color: #ff0000; text-decoration: none; }
 </style>
 <b>
 <div style="font-weight: bold; font-size: 12px; color: #b3ffff;">
-<a href="/index.html" target="_parent">Inglés</a>
+<a href="/index.html" target="_parent">Switch to English</a>
 -
 <a href="en_central.html" target="central">Inicio</a>
 -
