--- a/en_top.html
+++ b/en_top.html
@@ -20,7 +20,7 @@ a:hover {color: #ff0000; text-decoration: none; }
 </style>
 <b>
 <div style="font-weight: bold; font-size: 12px; color: #b3ffff;">
-<a href="/index_es.html" target="_parent">Spanish</a>
+<a href="/index.html" target="_parent">Switch to Spanish</a>
 -
 <a href="en_central.html" target="central">Start</a>
 -
