--- a/es_top.html
+++ b/es_top.html
@@ -20,7 +20,7 @@ a:hover {color: #ff0000; text-decoration: none; }
 </style>
 <b>
 <div style="font-weight: bold; font-size: 12px; color: #b3ffff;">
-<a href="/index.html" target="_parent">Switch to English</a>
+<a href="/index_en.html" target="_parent">Switch to English</a>
 -
 <a href="en_central.html" target="central">Inicio</a>
 -
