--- a/es_top.html
+++ b/es_top.html
@@ -28,7 +28,7 @@ a:hover {color: #ff0000; text-decoration: none; }
 -
 <a href="es_projects.html" target="central">Proyectos</a>
 -
-<a href="/blog/" target="_new">mi Blog</a>
+<a href="/blog/" target="_new">Blog</a>
 </div>
 </b>
 </center>
