--- a/en_top.html
+++ b/en_top.html
@@ -9,7 +9,7 @@
 <center>
 
 <div style="font-weight: bold; font-size: 12px; color: #ffb366; font-family: cursive;">
-Programming, Security and Datamining, any similarity with hollywood is just a coincidence.
+Programming, Security and Datamining. Open Source, Freedom of speech and Open Data.
 </div>
 
 <style type="text/css">
