--- a/es_top.html
+++ b/es_top.html
@@ -22,7 +22,7 @@ a:hover {color: #ff0000; text-decoration: none; }
 <div style="font-weight: bold; font-size: 12px; color: #b3ffff;">
 <a href="/index_en.html" target="_parent">Switch to English</a>
 -
-<a href="en_central.html" target="central">Inicio</a>
+<a href="es_central.html" target="central">Inicio</a>
 -
 <a href="es_cv.html" target="central">Currículum</a>
 -
