--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -17,6 +17,7 @@ la relación entre actores que trabajan juntos.<br /><br />
 <a href="Lamagna.pdf" />Análisis de Red Social de Actores</a>
 
 <br />
+<hr />
 <br />
 <br />
 <u><b>Análisis de datos electorales</b></u><br />
@@ -26,6 +27,29 @@ a poder contar una historia ó iniciar algun tipo de investigación.<br />
 En otras palabras: Responder preguntas! <br /><br />
 
 <a href="el1.html">¿ Porqué en el 2013 el partido político Convergencia Popular Porteña obtuvo 0 votos ?</a><br />
+
+<br />
+<hr />
+<br />
+
+<u><b>Lectura artificial de números manuscritos en 
+datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires</b></u><br />
+
+El reconocimiento de dígitos manuscritos es un tema que ocupa distintas areas 
+de conocimiento e investigacion tanto en aprendizaje automático como en 
+clasificación de patrones. Su importancia se debe al interés que genera la posibilidad de su
+aplicación práctica mediante la automatización de la comprensión del alto volumen
+de documentos impresos en empresas, gobiernos y una sociedad en expansion permanente. 
+Para citar algunos ejemplos la gestión automática de correo postal, procesamiento 
+de cheques bancarios, ingreso manual de datos en formularios, registros gubernamentales 
+y tarjetas de credito impresas son aplicaciones de gran uso.
+<br /><br />
+
+<a href="/dm/ResumenTesisWalterLamagna.pdf">Resumen de la Tesis (link 1)</a><br />
+<a href="http://datamining.dc.uba.ar/datamining/Files/Tesis/ResumenTesisWalterLamagna.pdf">Resumen de la Tesis (link 2)</a><br />
+<a href="">Link a la tesis (Spanish)</a><br />
+
+
 
 </body>
 </html>
