--- a/en_central.html
+++ b/en_central.html
@@ -19,8 +19,10 @@ Other Interests:
 <ul>
 <li>Ecology, recycling and power sources</li>
 <li>Languages and cultural diversity</li>
-<li>I love: Swimming, Sky, Team sports in the watter and <a href="taichivideo.html">tai chi</a></li>
+<li>Sports: Swimming, Skying and <a href="taichivideo.html">tai chi</a></li>
 </ul>
 
+<br />
+Here my <a href="walter.asc">PGP key</a>. Recommend using this one and not any from any other place.
 </body>
 </html>
