--- a/es_central.html
+++ b/es_central.html
@@ -19,8 +19,10 @@ Otros Intereses:
 <ul>
 <li><a href="ecologia/reciclado.html">ecología, reciclado y fuentes de energía</a></li>
 <li>idiomas y diversidad cultural</li>
-<li>Yo Amo: Nadar, Esquiar en la nieve y deportes de equipo en el agua y <a href="taichivideo.html">Tai Chi</a></li>
+<li>Deportes: Nadar, esquiar y <a href="taichivideo.html">Tai Chi</a></li>
 </ul>
 
+<br />
+Aquí  mi <a href="walter.asc">clave PGP</a>.  Recomiendo utilizar esta clave y ninguna otra de ningún otro lugar.
 </body>
 </html>
