--- a/en_central.html
+++ b/en_central.html
@@ -10,7 +10,7 @@ share some of my projects and ideas.<br /><br />
 
 Technical Interests:
 <ul>
-<li>unix and security</li>
+<li><a href="security/en_index.html">security</a></li>
 <li><a href="dm/en_index.html">datamining and knowledge discovery</a></li>
 <li>programming</li>
 </ul>
