--- a/en_top.html
+++ b/en_top.html
@@ -28,7 +28,9 @@ a:hover {color: #ff0000; text-decoration: none; }
 -
 <a href="en_projects.html" target="central">Projects</a>
 -
-<a href="/blog/" target="_new">my Linux Blog</a>
+<a href="https://twilightbbs.wordpress.com/" target="_new">Devops Blog</a>
+-
+<a href="https://datosabiertosylibres.wordpress.com/" target="_new">OpenData Blog</a>
 </div>
 </b>
 </center>
