--- a/en_central.html
+++ b/en_central.html
@@ -4,9 +4,21 @@
 <title>Walter - Personal website</title>
 </head>
 <body bgcolor="black" style="color:white; font-family: Verdana;">
-Hi! Welcome to my home page.  My name is Walter and here i 
-share some of my projects and ideas.<br /><br />
+<br /><br />
 <br />
+<div width=300 valign="middle">
+<a href="dm/en_index.html"><img src="icon_datosabiertos.png" width=100 /></a>
+&nbsp;&nbsp;
+<a href="dm/en_index.html"><img src="icon_datamining.png" width=100 /></a>
+&nbsp;&nbsp;
+<a href="security/en_index.html"><img src="icon_seguridad.png" width=90 /></a>
+&nbsp;&nbsp;
+<a href="security/en_index.html"><img src="icon_sysadmin.png" width=90 /></a>
+</div>
+<br />
+<br />
+
+
 
 Technical Interests:
 <ul>
