--- a/es_central.html
+++ b/es_central.html
@@ -4,14 +4,21 @@
 <title>Walter - Página personal</title>
 </head>
 <body bgcolor="black" style="color:white; font-family: Verdana;">
-Hola! Bienvenido a mi página web. Mi nombre es Walter y aca comparto algunos proyectos e ideas.
 <br /><br />
-
 <br />
-Intereses técnicos:
+<center>
+<a href="od/es_index.html"><img src="icon_datosabiertos.png" width=100 /></a>
+&nbsp;&nbsp;
+<a href="dm/es_index.html"><img src="icon_datamining.png" width=100 /></a>
+&nbsp;&nbsp;
+<a href="security/es_index.html"><img src="icon_seguridad.png" width=90 /></a>
+&nbsp;&nbsp;
+<a href="security/es_index.html"><img src="icon_sysadmin.png" width=90 /></a>
+</center>
+<br />
+<br />
+
 <ul>
-<li><a href="security/es_index.html">seguridad informática</a></li>
-<li><a href="dm/es_index.html">mineria de datos y descubrimiento de conocimiento (ciencia de datos)</a></li>
 <li>programacion</li>
 </ul>
 
