--- a/security/es_index.html
+++ b/security/es_index.html
@@ -4,29 +4,27 @@
 </head>
 <body bgcolor="black" style="color:white; font-family: Verdana;">
 
-<u><b>Hackeando DHCP para red del hogar</b></u><br />
 
-Para bien o para mal, en casa tengo un proveedor de televisión por cable. Es el servicio tradicional donde llega 
-un cable coaxial y se conecta al televisor. Hace unos pocos dias vinieron e instalaron un Decodificador, es un 
-dispositivo que se conecta entre el cable coaxial y la tele permitiendo ver señales digitales con mejor calidad, también incluye un software con Youtube y aplicaciones para mirar televisión por Internet.
+En este blog hay contenido que comparto con la comunidad con contenido
+relacionado a la seguridad, aunque me apasiona investigar el condimento
+final es compartir.  Considero importante compartir al menos algo de lo
+que investigo por que es una manera de devolver aquello que recibi de
+otras personas que consideran el compartir como la máxima expresión de
+intercambio y el cimiento para que algún dia se alcance la perfecta
+democratización para que todos vivamos en armonia.<br />
 <br />
-El problema: Este decodificador se conecta a la red LAN de la casa, pero no permite configurarle una dirección IP estática, la única manera es que obtenga una IP, dirección de máscara de red y servidores de resolución de nombres por DHCP.<br />
-El verdadero problema es que me tomo muy en serio todo lo que permito y no permito en mi red hogareña, cada servicio nuevo es algo que me preocupa. Quería evitar tener que instalar un servidor de DHCP, claramente está deshabilitado el DHCP en mi servidor wifi por que hago funcionar a las máquinas con IP estática (hasta ahora).<br /><br />
-<a href="http://www.wallves.com/blog/Hackeando%20el%20DHCP%20en%20la%20red.html" target=_new>continuar leyendo</a>
-<br /><br />
-
-<a href="https://github.com/walt3rminer/perl/tree/master/dhcpserver" target=_new>Proyecto en Github</a>
-
-<br />
-<hr />
+<a href="https://twilightbbs.wordpress.com/tag/security/" target="_sec">mi blog con info de seguridad (en ingles)</a>
 <br />
 <br />
-
+<a href="https://github.com/walt3rminer/perl/tree/master/dhcpserver" target=_new>Proyecto en Github sobre DHCP</a>
+<br />
+<br />
+<a href="https://github.com/walt3rminer/perl/tree/master/gpgcifrar" target="_new">Proyecto Github sobre cifrado</a>
+<br />
+<br />
 <hr>
-
-<u><b>Algunos podcasts</b></u><br /><br /><br />
-
-<a href="http://www.defensivesecurity.org/" target="_new">En ingles</a><br />
+<u><b>Contenido no personal:</b></u><br /><br /><br />
+<a href="http://www.defensivesecurity.org/" target="_new">Podcast</a><br />
 
 <br />
 
