--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title>Walter - Home Page</title>
+<title>Walter Marcelo Lamagna</title>
 <link rel="shortcut icon" href="/favicon.ico?v=6cd6089ee7f6">
 </head>
 <frameset rows="40,*" border="0">
-  <frame name="alto" src="es_top.html" scrolling="no">
+  <frame name="alto" src="top.html" scrolling="no">
   <frame name="central" src="es_central.html"> 
 </frameset> 
 </html>
