--- a/od/en_index.html
+++ b/od/en_index.html
@@ -1,3 +1,20 @@
+<html>
+<head>
+<meta charset="UTF-8">
+</head>
+<body bgcolor="black" style="color:white; font-family: Verdana;">
+
+Open data means a passion for the possibilities and opportunities it
+represents.  The concept of open data is something that always existed
+since the spirit of sharing data and useful relevent infomation with
+other people who can take these data to the next level.<br /><br />
+
+<a href="https://datoabierto.wordpress.com/">my blog about open data (In spanish)</a><br />
+<br />
+<br />
+<a href="https://www.facebook.com/groups/datosabiertos/">Community of open data in Argentina</a><br />
+<br />
+<br />
 
 
 This is a Social Network Analysis over an Argentine Movie Actors Network.<br />
