--- a/od/es_index.html
+++ b/od/es_index.html
@@ -12,6 +12,10 @@ personas que puedan llevar estos datos a el siguiente nivel.<br /><br />
 
 <a href="https://datoabierto.wordpress.com/">my blog sobre datos abiertos</a><br />
 <br />
+<br />
+<a href="https://www.facebook.com/groups/datosabiertos/">Comunidad de datos abiertos de Argentina</a><br />
+<br />
+<br />
 
 <u><b>Análisis de redes sociales</b></u><br />
 Son muy útiles los métodos que se pueden utilizar para analizar como se
