--- a/od/es_index.html
+++ b/od/es_index.html
@@ -10,6 +10,15 @@ que representa.  El concepto de datos abiertos es algo que siempre existió
 ya que el espíritu es compartir datos e información util y relevante con otras
 personas que puedan llevar estos datos a el siguiente nivel.<br /><br />
 
+Aqui algunas investigaciones que hice con caracter voluntario, motivado por la
+libertad jurídica y técnica de utilizar estos datos, que personalmente interpreto
+como de relevancia e interés, ya sea para tomar alguna decisión ó como dato de color,
+algo anecdótico en una charla de cafe.<br /><br />
+
+<a href="http://www.wallves.com/od/boletinoficial/designaciones.html" target="_bo1">Designaciones en el estado nacional, República Argentina</a><br />
+
+
+
 <a href="https://datoabierto.wordpress.com/">my blog sobre datos abiertos</a><br />
 <br />
 <br />
