--- a/od/es_index.html
+++ b/od/es_index.html
@@ -16,14 +16,10 @@ como de relevancia e interés, ya sea para tomar alguna decisión ó como dato d
 algo anecdótico en una charla de cafe.<br /><br />
 
 <a href="http://www.wallves.com/od/boletinoficial/designaciones.html" target="_bo1">Designaciones en el estado nacional, República Argentina</a><br />
-
-
-
-<a href="https://datoabierto.wordpress.com/">my blog sobre datos abiertos</a><br />
 <br />
+<a href="https://datoabierto.wordpress.com/">Blog de Datos Abiertos en [wordpress]</a><br />
 <br />
-<a href="https://www.facebook.com/groups/datosabiertos/">Comunidad de datos abiertos de Argentina</a><br />
-<br />
+<a href="https://www.facebook.com/groups/datosabiertos/">Comunidad de datos abiertos de Argentina [facebook]</a><br />
 <br />
 
 <u><b>Análisis de redes sociales</b></u><br />
