--- a/od/en_index.html
+++ b/od/en_index.html
@@ -9,11 +9,21 @@ represents.  The concept of open data is something that always existed
 since the spirit of sharing data and useful relevent infomation with
 other people who can take these data to the next level.<br /><br />
 
-<a href="https://datoabierto.wordpress.com/">my blog about open data (In spanish)</a><br />
+Here some personal and voluntary research, motivated by the legally and technically freedom
+of using these data, i personally interpret it as relevant and interesting, either to take a
+decision or just like anectotic for a coffee talk.<br /><br />
+
+<a href="http://www.wallves.com/od/boletinoficial/designaciones.html" target="_bo1">
+Designation of people in the national state, Argentinian Republic (in spanish)
+</a><br />
 <br />
+<a href="https://datoabierto.wordpress.com/">
+Open Data Blog in [wordpress] (in spanish)
+</a><br />
 <br />
-<a href="https://www.facebook.com/groups/datosabiertos/">Community of open data in Argentina</a><br />
-<br />
+<a href="https://www.facebook.com/groups/datosabiertos/">
+Open Data Community in Argentina [facebook] (in spanish, mostly)
+</a><br />
 <br />
 
 
