--- a/es_central.html
+++ b/es_central.html
@@ -17,6 +17,7 @@
 </center>
 <br />
 <br />
+<a href="https://www.linkedin.com/in/walter-lamagna"><img src="linkedin_circle_color-256.png" width=50 /></a>
 <br />
 Aquí  mi <a href="walter.asc">clave PGP</a>.  Recomiendo utilizar esta clave y ninguna otra de ningún otro lugar.
 </body>
