--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -4,6 +4,10 @@
 </head>
 <body bgcolor="black" style="color:white; font-family: Verdana;">
 
+<h1>Datos Abiertos</h1>
+
+<h2>¿ Qué son los Datos Abiertos ?</h2>
+
 
 <u><b>Análisis de redes sociales</b></u><br />
 Son muy útiles los métodos que se pueden utilizar para analizar como se
