--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -6,8 +6,23 @@
 
 <h1>Datos Abiertos</h1>
 
-<h2>¿ Qué son los Datos Abiertos ?</h2>
+Esta es una página en construcción e irá cambiando, buscando la mejora continua buscando como
+meta describir de manera más útil posible qué son los datos abiertos.  La útilidad la considero
+como una reducción de costos y energía en la mayoría de la población para alcanzar los mismos ó
+más objetivos que permitan vivir en paz y justicia para todos sin tener que ceder derechos de
+libertad sinó que incrementandolos.  ¿ Le parece utópico ?  Es lo que le han hecho creer.
+</br>
+</br>
 
+
+
+<h2>¿ Qué son los Datos Abiertos ?</h2>
+No habiendo podido encontrar una definición que me convenza decidí hacer mi propio espacio de reflexión acerca de lo que son
+los Datos Abiertos.  Hay aqui una recopilación de sitios web que han invertido mucho tiempo de muchisimas personas
+en escribir sobre Datos Abiertos.
+
+</br>
+</br>
 
 <u><b>Análisis de redes sociales</b></u><br />
 Son muy útiles los métodos que se pueden utilizar para analizar como se
