--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -18,7 +18,7 @@ libertad sinó que incrementandolos.  ¿ Le parece utópico ?  Es lo que le han 
 
 <h2>¿ Qué son los Datos Abiertos ?</h2>
 No habiendo podido encontrar una definición que me convenza decidí hacer mi propio espacio de reflexión acerca de lo que son
-los Datos Abiertos.  Hay aqui una recopilación de sitios web que han invertido mucho tiempo de muchisimas personas
+los Datos Abiertos.  Hay <a href="definiciones.html">aquí</a> una recopilación de sitios web que han invertido mucho tiempo de muchisimas personas
 en escribir sobre Datos Abiertos.
 
 </br>
