--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -21,6 +21,17 @@ No habiendo podido encontrar una definición que me convenza decidí hacer mi pr
 los Datos Abiertos.  Hay <a href="definiciones.html">aquí</a> una recopilación de sitios web que han invertido mucho tiempo de muchisimas personas
 en escribir sobre Datos Abiertos.
 
+
+<br />
+
+Los Datos Abiertos son aquellos conjuntos de datos que pueden ser de archivos de formatos propietarios decodificables,
+texto, imágenes, sonido ó video que estan acompañados por una licencia que permite su utilización.  No existe una
+limitación acerca de qué datos pueden ó no ser abiertos salvo las legales de cada país.
+
+<br />
+<h2>Preguntas frecuentes</h2>
+<li>¿ Los datos abiertos pueden tener nombres, apellidos y DNI ?</li>
+
 </br>
 </br>
 
